we stopped at overflow today 4/22/2024

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
         font-size: 16px;
     }
    header{
-      background-color:rgb(241,254,244)
+      background-color:rgb(241,254,244);
+      position: relative;
+      overflow-x:clip;
     }
  
    a{
@@ -46,15 +48,18 @@
     padding: 1rem 1rem 0rem;
     visibility: hidden;
     transition: all 150ms ease-in;
-   
    }
-   .nav_link_group ul {
+   
+   .nav_link_group ul, .sub-container ul{
     display: flex;
     flex-direction: column;
-    gap: 1rem;  
+    gap: 1rem; 
    }
-   .nav_link_group ul li{
+   .nav_link_group ul li, .sub-container ul li a{
     width: auto;
+    cursor: pointer;
+    transition: all 300ms ease-in;
+    color: black;
        }
    .nav_link_group ul li img{
     display: none;
@@ -76,6 +81,16 @@
    .fa-caret-down{
     display: none;
    }
+   .nav_link_group a:hover{
+   color: blue;
+  
+   }
+ .caret:hover{
+    color: blue;
+   }
+   #login:hover{
+    color: blue;
+      }
 
 
    button{
@@ -86,9 +101,35 @@
     border: none;
     cursor: pointer;
     width: 100%;
-   
-
    }
+    .sub-container{
+       display: flex;
+       position: absolute;
+       top: 16dvh;
+       gap: 2rem;
+       flex-direction: column; 
+      background-color: ;
+      left: 100%;
+      width: 100%;
+      height: 84dvh;
+      padding: 1rem 1rem 0rem;
+      background-color:rgb(241,254,244) ;
+    }
+    .sub-container ul li:first-child {
+        color: grey;
+        font-size: .7rem;
+        text-transform:uppercase;
+    }
+
+
+
+
+
+    /* .back{
+        background-color: rgb(241,254,244);   
+    } */
+
+
    @media(min-width: 1020px){
     .mobile-icon{
         display: none;
@@ -134,6 +175,9 @@
         display: inline;
        }
        .fa-caret-right{
+        display: none;
+       }
+       .sub-container{
         display: none;
        }
 
